# Cpp-course

./: .gitignore
2_Triangles/: CMakeLists.txt  README.md
2_Triangles/bsp_tree/includes/: bsp.h
2_Triangles/bsp_tree/sources/: bsp.cpp
2_Triangles/includes/: line_t.h  plate_t.h  point_t.h  triangle_t.h  triangles.h  vector_t.h
2_Triangles/optimizers/bounding_box/includes/: bounding_box.h
2_Triangles/optimizers/bounding_box/sources/: bounding_box.cpp
2_Triangles/optimizers/bsp_tree/includes/: bsp.h
2_Triangles/optimizers/bsp_tree/sources/: bsp.cpp
2_Triangles/sources/: line_t.cpp  main.cpp  plate_t.cpp  point_t.cpp  triangle_t.cpp  triangles.cpp  vector_t.cpp
2_Triangles/test/: main.cpp  test_generator.cpp  unit_tests.cpp
2_Triangles/triangles/includes/: input.h  line_t.h  plate_t.h  triangle_info.h  triangle_t.h  triangles.h  vector_t.h
2_Triangles/triangles/sources/: input.cpp  line_t.cpp  main.cpp  plate_t.cpp  triangle_t.cpp  triangles.cpp
2_Triangles/triangles/test/: main.cpp  test_generator.cpp  unit_tests.cpp
2_Triangles/triangles/utilities/includes/: bounding_box.h  bsp.h
2_Triangles/triangles/utilities/sources/: bsp.cpp
2_Triangles/visualization/includes/: first_app.hpp  help.hpp  keyboard_movement_controller.hpp  lve_camera.hpp  lve_device.hpp  lve_game_object.hpp  lve_model.hpp  lve_pipeline.hpp  lve_renderer.hpp  lve_swap_chain.hpp  lve_window.hpp  simple_render_system.hpp
2_Triangles/visualization/shaders/: compile.sh  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
2_Triangles/visualization/sources/: first_app.cpp  help.cpp  keyboard_movement_controller.cpp  lve_camera.cpp  lve_device.cpp  lve_model.cpp  lve_pipeline.cpp  lve_renderer.cpp  lve_swap_chain.cpp  lve_window.cpp  main.cpp  simple_render_system.cpp
3_Tree/: CMakeLists.txt  README.md
3_Tree/includes/: input.h  node_t.h  range_queries.h  tree_t.h
3_Tree/sources/: input.cpp  main.cpp  range_queries.cpp  tree.cpp  tree_dump.cpp
3_Tree/test/: end_to_end.cpp  test1.txt  test2.txt  test3.txt  unit_test.cpp
4_Matrix/: CMakeLists.txt  README.md
4_Matrix/includes/: input.h  matrix.h  test_generator.h
4_Matrix/sources/: input.cpp  main.cpp  matrix.cpp
4_Matrix/test/: end_to_end.cpp  test_generator.cpp  unit_test.cpp
5_ParaCL/: CMakeLists.txt  IRparser.y  README.md  lexer.l  parser.y  tree
5_ParaCL/includes/: a.out  ast.hpp  driver.hpp  lexer.hpp  pow.hpp
5_ParaCL/sources/: a.out  ast.cpp  codegen.cpp  driver.hpp  example1  iterate.cpp  lex.yy.cc  lexer.l  main.cpp  paracl.hpp  parser.tab.cc  parser.tab.hh  parser.y  pow.cpp
5_ParaCL/test/: c_n_k.cl  empty.cl  equlid.cl  example1  example10  example11  example12  example13  example14  example15  example16  example17  example18  example19  example2  example20  example21  example22  example23  example24  example25  example26  example27  example28  example29  example3  example30  example31  example32  example33  example34  example36  example37  example4  example5  example6  example7  example8  example9  fib  (+11 more)
6_OpenCL/: CMakeLists.txt  README.md  bsort.cpp
6_OpenCL/includes/: bsort.h  unit_test.h
6_OpenCL/sources/: bsort.cpp  main.cpp
6_OpenCL/test/: gtest.cpp  main.cpp  unit_test.cpp
6_OpenCL/test/files/: test10000  test1024  test3  test3000  test32  test4000  test5000  test6  test6000  test64
